--- a/button_clicker/style.css
+++ b/button_clicker/style.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 .container {
-    width: 860px;
+    width: 700px;
     margin: 0px auto;
 }
 
@@ -16,6 +16,71 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 20px;
+    padding: 10px 20px;
     margin-bottom: 20px;
+}
+
+.search{
+    border: 2px solid #000;
+    width: 200px;
+    height: 30px;
+}
+
+.btn-login{
+    height: 30px;
+    width: 50px;
+    color: #fff;
+    background-color: #2a77e3;
+    border:2px solid #000;
+    box-shadow: 2px 2px #000;
+}
+
+.row {
+    display: flex;
+}
+
+.box-definition {
+    display: flex;
+    align-items: center; 
+    border: 2px solid black;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    padding: 20px 20px 20px 0px;
+}
+
+div.left {
+    text-align: center;
+    width: 120px;
+}
+
+.text-definition {
+    width: 220px;
+}
+
+.flex-1{
+    flex:1;
+    border: 2px solid #000;
+    padding:10px;
+    height:80px;
+    text-align: center;
+    width: 220px;
+}
+
+.btn-like{
+    font-weight: bold;
+    background-color: #ffd966;
+    border: 2px solid #000;
+    margin-top:20px;
+    width: 80px;
+    height: 25px;
+    box-shadow: 2px 2px #000;
+}
+
+.btn-add{
+    background-color: #93c47d;
+    width: 150px;
+    border:2px solid #000;
+    box-shadow: 2px 2px #000;
+    margin-top: 20px;
+    height: 30px;
 }
