--- a/Creating_Website_MacDonald/CH7_Better_Style_Sheets/style.css
+++ b/Creating_Website_MacDonald/CH7_Better_Style_Sheets/style.css
@@ -4,3 +4,16 @@ h1{
     text-align: center;
     padding: 20px;
 }
+
+#introductory{
+    color: #c7c7c7;
+}
+
+img.scowl_small, img.house_small{
+    float: left;
+    margin-right: 10px;
+}
+
+.sub-heading{
+    color: #680400;
+}
