fig7-3 PessimistReview Styled with contextual selectors

--- a/Creating_Website_MacDonald/CH7_Better_Style_Sheets/fig4_style.css
+++ b/Creating_Website_MacDonald/CH7_Better_Style_Sheets/fig4_style.css
@@ -28,9 +28,10 @@ h1{
     padding: 20px;
 }
 
-#introductory{
+/* #introductory{
     color: #c7c7c7;
-}
+    margin-bottom: 40px;
+} */
 
 img{
     float: left;
