Felke: javajam with css

--- a/Web_Development_HTML_Felke-Morris/CSS/javajam_case_study/javajam.css
+++ b/Web_Development_HTML_Felke-Morris/CSS/javajam_case_study/javajam.css
@@ -25,7 +25,11 @@ nav {
     font-weight: bold;
 }
 
+dt{
+    font-weight: bold ;
+}
 footer {
+    background-color: #d2b48c;
     font-style: italic;
     text-align: center;
     font-size: .60em;
