--- a/Web_Development_HTML_Felke-Morris/CSS/practice_3.2/style.css
+++ b/Web_Development_HTML_Felke-Morris/CSS/practice_3.2/style.css
@@ -1,12 +1,14 @@
 body {
     background-color: #e6e6fa;
+    color:#191970;
 }
 
 h1 {
-    color: #fff;
     background: #191970;
+    color: #e6e6fa;
 }
 
 h2{
     background-color: #aeaed4;
+    color:#191970;
 }
