--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_javajam_case_study/javajam.css
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_javajam_case_study/javajam.css
@@ -1,15 +1,8 @@
 body {
     background-color: #fcebb6;
+    background-image: url(background.gif);
     color: #221811;
     font-family: Verdana, Arial, sans-serif;
-}
-
-header {
-    background-color: #d2b48c;
-    background-image: url(javajamlogo.jpg);
-    height: 150px;
-    background-repeat: no-repeat;
-    background-position: left;
 }
 
 #wrapper {
@@ -18,28 +11,54 @@ header {
     background-color: #FEF6C2;
     min-width: 900px;
     max-width: 1280px;
-    box-shadow: 5px 5px 5px #000;
+    box-shadow: 2px 2px 2px #000;
 }
 
-
-h1, h2 {
-    color: #221811;
+header {
+    background-image: url(javajamlogo.jpg);
     background-color: #d2b48c;
-    /* text-align: center; */
+    height: 150px;
+    background-repeat: no-repeat;
 }
 
 h1 {
-    line-height: 200%;
-    height: 150px;
+    padding-top: 45px;
+    padding-left: 220px;
+    font: 3em;
 }
 
-
 nav {
+    font-size: 1.5em;
+    padding-top: 10px;
     text-align: center;
     font-weight: bold;
 }
 
+nav a {
+    text-decoration: none;
+}
 
+main {
+    padding: 2em;
+    display: block;
+}
+
+
+h4 {
+    background-color: #d2b48c;
+    font-size: 1.2em;
+    padding-left: 10px;
+    padding-bottom: 5px;
+}
+
+.details {
+    padding: 0 20%;
+}
+
+img {
+    padding-left: 10px 0;
+
+}
 
 dt{
     font-weight: bold ;
@@ -49,4 +68,6 @@ footer {
     font-style: italic;
     text-align: center;
     font-size: .60em;
+    padding-bottom: 10px;
+    border-top: 2px solid #000;
 }
