Ch4 Pacific Trails Case Study-06

--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_pacifictrails_case_study/pacific.css
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_pacifictrails_case_study/pacific.css
@@ -3,6 +3,11 @@ body {
     color: #666;
 }
 
+#wrapper {
+    width: 80%;
+    margin: 0 auto;
+}
+
 header{
     background-color: #000033;
     color: #fff;
