--- a/Web_Development_HTML_Felke-Morris/Graphics/ch4_yogaStudio_case_study/yogacss/yoga.css
+++ b/Web_Development_HTML_Felke-Morris/Graphics/ch4_yogaStudio_case_study/yogacss/yoga.css
@@ -7,6 +7,9 @@ body {
 #wrapper {
     width: 80%;
     margin: 0 auto;
+    background-color: #f5f5f5;
+    min-width: 1000px;
+    max-width: 1280px;
 }
 
 header {
