--- a/Modern_HTML_CSS_Traversy/CSS/Implementing CSS/css_challenge.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Implementing CSS/css_challenge.css
@@ -1,13 +1,44 @@
 body {
-    font-family: 'lato', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 18px;
-    line-height: 1.6px;
+    line-height: 1.6;  /*line-height is a multiplier*/
 }
 
 header {
     background: #5e175b;
+    color: white;
 }
 
 h1 {
     text-align: center; font-size: 40px; text-indent: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+a:hover {
+    color: rebeccapurple;
+}
+
+a:active {
+    color: red;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+ul.main-menu{
+    background-color: #f4f4f4;
+    text-indent: 10px;
+    text-transform: uppercase;
+}
+
+p.lead {
+    font-size: 20px;
+    color: rebeccapurple;
+    font-weight: bold;
 }
