--- a/Modern_HTML_CSS_Traversy/CSS/Flexbox/flex-containers.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Flexbox/flex-containers.css
@@ -2,6 +2,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.flex-container {
+    background: #ccc;
+    display: flex;
+    flex-direction: row; /*Default direction*/
+    flex-wrap: wrap;
+    /* gap: 10px; */
+    /* row-gap: 10px; */
+    column-gap: 10px;
+}
+
 .flex-item {
     height: 200px;
     width: 200px;
