--- a/Modern_HTML_CSS_Traversy/CSS/Flexbox/justify_align_content.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Flexbox/justify_align_content.css
@@ -7,6 +7,8 @@ body {
     display: flex;
     width: 100%;
     height: 400px;
+    justify-content: center;
+    align-items: center;
 }
 
 .flex-item {
