--- a/Modern_HTML_CSS_Traversy/CSS/Flexbox/flex-properties.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Flexbox/flex-properties.css
@@ -22,6 +22,7 @@ body {
 } */
 
 .item-1, .item-2 {
+    /* flex: flex-grow flex-shrink flex-basis*/
     flex-grow: 1;
 }
 
@@ -35,6 +36,16 @@ And I'm gonna show you that in a few minutes, but the flex basis property, it ju
 
 00:06:00
 
-these and then for item three set flex basis to 200 pixels and we save that. Now you can see item three is now 200 pixels, right? So it'll still shrink and it'll grow to 200 pixels.  */
-    flex-basis: 200px;
+these and then for item three set flex basis to 200 pixels and we save that. Now you can see item three is now 200 pixels, right? So it'll still shrink and it'll grow to 200 pixels. Flex basis sets a minimum size. */
+    /* flex-basis: 200px; */
+}
+
+.item-2 {
+    /* flex: flex-grow flex-shrink flex-basis*/
+    flex: 2;
+}
+
+.item-3 {
+    /* flex: flex-grow flex-shrink flex-basis*/
+    flex: 3;
 }
