Ch7: Flexbox Layout Challenge

--- a/Modern_HTML_CSS_Traversy/CSS/Flexbox Layout Challenge/flexbox_challenge.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Flexbox Layout Challenge/flexbox_challenge.css
@@ -66,8 +66,8 @@ p {
     color: #fff;
 }
 
-.main aside li {
+/* .main aside li {
     padding: 10px;
     background-color: #f4f4f4;
     border-bottom: 1px solid #ccc;
-}
+} */
