--- a/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/style.css
@@ -27,4 +27,9 @@ li {
 
 .container {
     max-width: 1100px;
+    background-color: #f8fafe;
+    border-radius: 10px;
+    margin: 0 auto;
+    margin-top: 150px;
+    padding: 70px 60px;
 }
