--- a/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/style.css
@@ -41,6 +41,8 @@ li {
     flex-wrap: wrap;
 }
 
+
+/* Card */
 .card {
     flex: 1;
     background-color: #fff;
@@ -49,4 +51,36 @@ li {
     text-align: center;
     margin-bottom: 20px;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+}
+
+.card h2 {
+    font-size: 18px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    padding: 15px;
+    color: #333;
+    background: #f8fafe;
+}
+
+.card-pro h2 {
+    background: linear-gradient(90deg, rgba(194,227,255,1) 13%,
+    rgba(180,118,254,1) 100%);
+    color: #fff;
+}
+
+.card-enterprise h2 {
+    background: linear-gradient(90deg, rgba(255,177,194,1) 13%,
+    rgba(255,203,114,1) 100%);
+    color: #fff;
+}
+
+/* Price */
+.card .price {
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.card .price span {
+    font-size: 18px;
 }
