Price Card Project

--- a/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/style.css
@@ -121,3 +121,12 @@ li {
 }
 
 /* List */
+.card ul {
+    text-align: left;
+    margin-top: 50px;
+}
+
+.card ul li i {
+    color: #98ca9e;
+    margin-right: 10px;
+}
