Responsive - Flexible Layouts and Percentages

--- a/Modern_HTML_CSS_Traversy/CSS/Responsive/sytle.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Responsive/sytle.css
@@ -8,8 +8,13 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+img {
+    max-width: 100%;
+}
+
+
 .container {
-    max-width: 1100px;
+    max-width: 80%;
     margin: 50px auto;
     padding: 20px;
 }
