--- a/Modern_HTML_CSS_Traversy/CSS/rem_em_units/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/rem_em_units/style.css
@@ -7,3 +7,10 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+.container {
+    max-width: 900px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid black;
+}
