--- a/Modern_HTML_CSS_Traversy/CSS/media_queries/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/media_queries/style.css
@@ -44,8 +44,8 @@ body {
     }
 }
 
-@media (min-width: 768px) and (max-width:  991px) {
+/* @media (min-width: 768px) and (max-width:  991px) {
     body {
         background: #333;
     }
-}
+} */
