Responsive Pricing Card

--- a/Modern_HTML_CSS_Traversy/CSS/Responsive/price_grid.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Responsive/price_grid.css
@@ -130,3 +130,14 @@ li {
     color: #98ca9e;
     margin-right: 10px;
 }
+
+/* Media Queries */
+@media (max-width:768px) {
+    .pricing {
+        flex-direction: column;
+    }
+}
+
+.container {
+    margin: 2em;
+}
