--- a/Modern_HTML_CSS_Traversy/CSS/Responsive_Flexbox/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Responsive_Flexbox/style.css
@@ -13,7 +13,7 @@
     padding-bottom: 7px;
 }
 
-.main-menu li.last-list-item {
+/* .main-menu li.last-list-item {
     border: none;
 }
 
@@ -22,5 +22,5 @@
 }
 
 .main aside {
-    width: 100;;
-}
+    width: 100;
+} */
