--- a/Modern_HTML_CSS_Traversy/CSS/Responsive_Flexbox/styles2.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Responsive_Flexbox/styles2.css
@@ -67,8 +67,8 @@
     border-bottom: 1px solid #ccc;
   }
   
-  @media(max-width: 768px) {
+  /* @media(max-width: 768px) {
     .header {
       
     }
-  }
+  } */
