--- a/Modern_HTML_CSS_Traversy/CSS/Responsive_Flexbox/styles2.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Responsive_Flexbox/styles2.css
@@ -67,8 +67,35 @@
     border-bottom: 1px solid #ccc;
   }
   
-  /* @media(max-width: 768px) {
+  @media(max-width: 768px) {
     .header {
-      
+      padding: 20px;
     }
-  } */
+
+    .header h1 {
+      font-size: 1.5rem;
+      text-align: center;
+    }
+
+    .main-menu {
+      flex-direction: column;
+      text-align: center;
+    }
+
+    .main-menu li {
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 7px;
+    }
+
+    .main-menu li.last-list-item {
+      border: none;
+    }
+
+    .main {
+      flex-direction: column;
+    }
+
+    .main aside {
+      width: 100%;
+    }
+  }
