--- a/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
@@ -6,4 +6,15 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+p {
+    padding: 2rem;
+}
+
+main {
+    max-width: 1100px;
+    margin: 30px auto;
+    padding: 20px;
 }
