--- a/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
+    display: flex;
 }
 
 p {
@@ -14,7 +15,22 @@ p {
 }
 
 main {
+    container-type: inline-size;
     max-width: 1100px;
     margin: 30px auto;
     padding: 20px;
+}
+
+main p {
+    background: lightgreen;
+}
+
+aside {
+    flex: 0 0 30%;
+}
+
+@container (max-width: 992px) {
+    main p {
+        background: lightblue;
+    }
 }
