--- a/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
@@ -16,7 +16,7 @@ p {
 
 main {
     container-type: inline-size;
-    max-width: 1100px;
+    max-width: 100%;
     margin: 30px auto;
     padding: 20px;
 }
@@ -27,6 +27,8 @@ main p {
 
 aside {
     flex: 0 0 30%;
+    background: #f4f4f4;
+    padding: 20px;
 }
 
 @container (max-width: 992px) {
