--- a/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
@@ -31,8 +31,8 @@ aside {
     padding: 20px;
 }
 
-@container (max-width: 992px) {
+/* @container (max-width: 992px) {
     main p {
         background: lightblue;
     }
-}
+} */
