--- a/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
@@ -26,13 +26,15 @@ main p {
 }
 
 aside {
+    container-type: inline-size;
+    container-name: aside;
     flex: 0 0 30%;
     background: #f4f4f4;
     padding: 20px;
 }
 
-/* @container (max-width: 992px) {
+@container (max-width: 992px) {
     main p {
         background: lightblue;
     }
-} */
+}
