--- a/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Container_Queries/style.css
@@ -38,3 +38,9 @@ aside {
         background: lightblue;
     }
 }
+
+@container aside (max-width: 300px) {
+    aside p {
+        background: lightgreen;
+    }
+}
