Landing Form Bono Mini-Project

--- a/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/style.css
@@ -19,3 +19,33 @@ body {
     ),
     url('../images/background.jpg') no-repeat center center;
 }
+
+/* Header */
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+}
+
+.header .logo {
+    width: 100px;
+}
+
+.header .header-right {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+}
+
+.header .header-right i {
+    margin-right: 5px;
+}
+
+.header .header-right a {
+    color: white;
+}
+
+.header .header-right a:hover {
+    color: purple;
+}
