Landing Form Bono Mini-Project

--- a/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/style.css
@@ -49,3 +49,17 @@ body {
 .header .header-right a:hover {
     color: purple;
 }
+
+
+/* Main Content */
+.main-content {
+    display: flex;
+}
+
+.main-content form {
+    flex: 1;
+}
+
+.main-content .text-container {
+    flex: 1;
+}
