Landing Form Bono Mini-Project

--- a/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .wrapper {
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(to bottom, 
     rgba(255, 64, 50, 0.8),
     rgba(71,17,116,0.9)
@@ -47,6 +47,10 @@ body {
 }
 
 .header .header-right a:hover {
+    color:purple;
+}
+
+.header .header-right a:hover {
     color: purple;
 }
 
@@ -54,6 +58,13 @@ body {
 /* Main Content */
 .main-content {
     display: flex;
+    gap: 50px;
+    max-width: 1100px;
+    margin: 200px auto;
+    justify-content: center;
+    align-items: start;
+    height: 100%;
+    padding: 0 40px;
 }
 
 .main-content form {
