--- a/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/style.css
@@ -75,3 +75,29 @@ body {
     flex: 1;
 }
 
+/* Form */
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 15px;
+    border: 0;
+    border-radius: 5px;
+    background: rgba(255,255,255,0.2);
+    color: white;
+    outline: 0;
+}
+
+.form-group textarea {
+    height: 100px;
+}
