--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/style.css
@@ -8,3 +8,15 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+header {
+    background-color: lightblue;
+    padding: 20px 0;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.container {
+    display: flex;
+    max-width: 600px;
+    margin: 30px auto;
+}
