--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/style.css
@@ -4,12 +4,21 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: lightblue;
+    --secondary-color: lightcoral;
+    --tertiary-color: lightgreen;
+    --shadow-opacity: 0.4;
+    --container-width: 600px;
+    --container-width-large: 1100px;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
 }
 
 header {
-    background-color: lightblue;
+    background-color: var(--primary-color);
     padding: 20px 0;
     text-align: center;
     margin-bottom: 10px;
@@ -19,4 +28,23 @@ header {
     display: flex;
     max-width: 600px;
     margin: 30px auto;
+}
+
+.box {
+    flex: 1;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0 ,var(--shdow-opacity));
+}
+
+.box-1 {
+    background: var(--primary-color);
+}
+
+.box-2 {
+    background: var(--secondary-color);
+}
+
+.box-3 {
+    background: var(--tertiary-color);
 }
