--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/style.css
@@ -6,4 +6,27 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    font-family: 18px;
+    line-height: 1.6;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+p {
+    margin-bottom: 20px;
+}
+
+img {
+    max-width: 100%;
+}
+
+.container {
+    max-width: 700px;
+    margin: 0 auto;
 }
