--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/style.css
@@ -30,3 +30,14 @@ img {
     max-width: 700px;
     margin: 0 auto;
 }
+
+.header {
+    background: linear-gradient((45deg, #f00, #00f));
+    color: #fff;
+    padding: 10px 0;
+    /* margin-bottom: 80px; */
+}
+
+.header .menu a {
+    /* color: #fff; */
+}
