--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/style.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-family: 18px;
     line-height: 1.6;
+    scroll-behavior: smooth;
 }
 
 ul {
@@ -32,12 +33,43 @@ img {
 }
 
 .header {
-    background: linear-gradient((45deg, #f00, #00f));
+    background: linear-gradient(45deg, #f00, #00f);
     color: #fff;
     padding: 10px 0;
-    /* margin-bottom: 80px; */
+    margin-bottom: 80px;
 }
 
 .header .menu a {
-    /* color: #fff; */
+    color: #fff;
+}
+
+.header .menu ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+}
+
+.header .menu a {
+    color: #fff;
+}
+
+.header .menu a:hover {
+    color: #f00;
+}
+
+.section {
+    margin: 30px 0;
+}
+
+.section h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    background: linear-gradient(45deg, #f00, #00f);
+    color: #fff;
+    font-size: 40px;
+}
+
+.section#home {
+    margin-bottom: 100px;
 }
