Various CSS Features

--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/style.css
@@ -37,6 +37,14 @@ img {
     color: #fff;
     padding: 10px 0;
     margin-bottom: 80px;
+    position: sticky;
+    top: 0;
+    z-index: 1000; /*z-index greater than 1 will always remain at the top*/
+}
+
+/* Create a class that will make the header transparent */
+.header.transparent {
+    background: linear-gradient(45deg, rgba(255, 0, 0, 0.8), rgba(0,0,255,0.8));
 }
 
 .header .menu a {
