--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+/* create custom property */
+:root {
+    --header-transparency: 0.9;
+}
+
+html,
 body {
     font-family: 'Poppins', sans-serif;
     font-family: 18px;
@@ -59,7 +65,11 @@ img {
 
 /* Create a class that will make the header transparent */
 .header.transparent {
-    background: linear-gradient(45deg, rgba(255, 0, 0, 0.8), rgba(0,0,255,0.8));
+    background: linear-gradient(
+        45deg, 
+        rgba(255, 0, 0, var(--header-transparency)), 
+        rgba(0,0,255, var(--header-transparency))
+    );
 }
 
 .section {
