--- a/Modern_HTML_CSS_Traversy/CSS/Ch10_CSS Features/Nesting/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch10_CSS Features/Nesting/style.css
@@ -47,4 +47,29 @@ a {
     }
 }
 
+.section {
+    margin: 50px 0;
 
+    .card {
+        background: #fff;
+        padding: 20px;
+        margin: 20px 0;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+
+        h3 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1rem;
+        }
+    }
+}
+
+@media(max-width: 768px) {
+    .header {
+        height: 40vh;
+    }
+}
