--- a/Modern_HTML_CSS_Traversy/CSS/Ch10_CSS Features/Nesting/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch10_CSS Features/Nesting/style.css
@@ -71,5 +71,19 @@ a {
 @media(max-width: 768px) {
     .header {
         height: 40vh;
+        padding-top: 40px;
+
+    h1 {
+        font-size: 3rem;
     }
+
+    p {
+        font-size: 1.5rem;
+    }  
+    
+    .card h3 {
+        font-size: 1.2rem;
+    }
+    }
+
 }
