--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/CSS/style.css
@@ -22,6 +22,15 @@ img {
     max-width: 100%;
 }
 
+/* bg-primary is called the utility class. YOu can use utility classes anywhere on the site.
+It is not made for a specific thing for example the .hero class.
+Place utility class up top underneath the based stuff */
+
+/* Utility Classes */
+.bg-primary {
+    background: #fcf5e9;
+}
+
 /* Container */
 .container {
     max-width: 1100px;
@@ -71,10 +80,34 @@ img {
     font-weight: 600;
 }
 
+/* Hero */
+.hero {
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.hero h2 {
+    font-size: 3rem;
+    line-height: 1.4;
+    font-weight: normal;
+}
+
 /* Media Queries */
 @media(max-width: 768px) {
     .header .header-flex {
         flex-direction: column;
         gap: 1.5rem;
     }
+    .hero {
+        height: 300px;
+    }
+
+    .hero h2 {
+    font-size: 1.8rem;
+    }
 }
+
+
