--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/CSS/style.css
@@ -38,6 +38,12 @@ Place utility class up top underneath the based stuff */
     background: #fcf5e9;
 }
 
+.section-heading {
+    font-size: 1.6rem;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
 /* Container */
 .container {
     max-width: var(--container-narrow);
@@ -149,6 +155,37 @@ gallery-item themselves */
 
 .footer a {
     margin: 0.2rem;
+}
+
+/* Services */
+.services {
+    background: #333;
+    color: #fff;
+    padding: 3rem 0 4rem;
+}
+
+.services-flex {
+    display: flex;
+    gap: 2rem;
+}
+
+.service-item h4 {
+    font-size: 1.1rem;
+    margin-bottom: 0.7rem;
+}
+
+/* Team */
+.team {
+    padding: 3rem 0 4rem;
+}
+
+.team-flex {
+    display: flex;
+    gap: 1.4rem;
+}
+
+.team img {
+    border-radius: 10px;
 }
 
 /* Media Queries */
