--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/CSS/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/CSS/style.css
@@ -45,10 +45,39 @@ Place utility class up top underneath the based stuff */
     color: #fff;
 }
 
+.bg-dark .bg-primary {
+    padding: 0 0.3rem;
+}
+
+.btn {
+    display: inline-block;
+    padding: 1rem 2rem;
+    border: 1px solid #333;
+    background: transparent;
+    font-family: inherit;
+    font-size: inherit;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background: #333;
+    color: #fff;
+}
+
 .section-heading {
     font-size: 1.6rem;
     text-align: center;
     margin-bottom: 40px;
+}
+
+.visually-hidden {
+  clip: rect(0 0 0 0); 
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
 }
 
 /* Container */
@@ -191,6 +220,44 @@ gallery-item themselves */
 
 .team img {
     border-radius: 10px;
+}
+
+/* Contact */
+.contact {
+    padding: 3rem 0 4rem;
+}
+
+.contact p {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.form-group {
+    margin: 2rem 0;
+}
+
+.contact input,
+.contact textarea {
+    border: none;
+    border-bottom: 1px #333 solid;
+    width: 100%;
+    font-family: inherit;
+    font-size: inherit;
+    padding-bottom: 1rem;
+}
+
+.contact textarea {
+    height: 200px;
+}
+
+.contact input:focus,  /* input and the state of focus */
+.contact textarea:focus /* textarea and the state of focus */
+    {
+    outline: 0;
+}
+
+.contact button {
+    width: 100%;
 }
 
 /* Media Queries */
