--- a/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/style.css
@@ -82,3 +82,13 @@ body {
 .search button:hover {
   background-color: #45a049;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+}
