Attribute Selectors and Pseudo Classes

--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/style.css
@@ -67,3 +67,8 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+/* Select by type attribute */
+input[type='email'] {
+    border-color: green;
+}
