Attribute Selectors and Pseudo Classes

--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/style.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/style.css
@@ -84,10 +84,22 @@ input[type='password'][maxlength='8'] {
 }
 
 /* Select button with type of submit */
+button[type='submit'] {
+    background: purple;
+}
 
-/* Select only links that have a href attribute starting with # */
+/* Select only links that have a href attribute starting with # (use regex expression symbol ^)*/
+a[href^='#'] {
+    color: yellow;
+}
 
 /* Select only links that have a href attribute ending with .com */
+a[href$='.com'] {
+    color: lightgreen;
+}
 
 /* Select only links that have a href attribute containing traversy */
+a[href*='traversy'] {
+    text-decoration: underline;
+}
 
