Child adn Sibling Combinators

--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/combinators.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/combinators.css
@@ -22,7 +22,11 @@ body {
 */
 
 /* Get only paragraphs that are direct children of container */
-
+.container
+ p {
+  font-weight: bold;
+  margin-bottom: 10px;
+ }
 /* Get only unordered lists that are direct children of container */
 
 /* Get only links that are direct children of container */
