--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/pseudo.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/pseudo.css
@@ -39,3 +39,21 @@ p::selection {
     color: red;
     background: yellow;
 }
+
+input:required {
+    border-color: red;
+}
+
+input::placeholder {
+    color: purple;
+    font-weight: bold;
+}
+
+input::file-selector-button {
+    font-weight: bold;
+    color: dodgerblue;
+    background: #fff;
+    padding: 0.5rem;
+    border: thin solid gray;
+    border-radius: 3px;
+}
