--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/overlay_project.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/overlay_project.css
@@ -18,4 +18,34 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    position: relative;
+}
+
+.hero {
+    height: 100%;
+    background: url('./background.jpg') center/cover no-repeat;
+    color: #fff;
+    position: relative;
+    text-align: center;
+}
+
+.hero h1 {
+    font-size: 3rem;
+    padding: 1rem;
+}
+
+.hero p {
+    font-size: 1.5rem;
+    padding: 1rem;
+    margin-bottom: 2.5rem;
+}
+
+.hero .btn {
+    text-decoration: none;
+    color: #fff;
+    padding: 1rem;
+    background: #333;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
 }
