Image Overlay With :before

--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/overlay_project.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/overlay_project.css
@@ -45,7 +45,11 @@ body {
     color: #fff;
     padding: 1rem;
     background: #333;
-    border: 0;
+    border: 1px solid #fff;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.hero .btn:hover {
+    opacity: 1;
 }
