Image Overlay With :before

--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/overlay_project.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/overlay_project.css
@@ -58,6 +58,10 @@ body {
     opacity: 1;
 }
 
+.hero::before {
+    content: '';
+}
+
 @media (max-width: 768px) {
     .hero h1 {
         font-size: 2rem;
