--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/overlay_project.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/overlay_project.css
@@ -60,6 +60,12 @@ body {
 
 .hero::before {
     content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
 }
 
 @media (max-width: 768px) {
