pseudo-element is(), where(), and has()

--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/is_where_has.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/is_where_has.css
@@ -13,8 +13,29 @@ body {
     margin: 30px auto;
 }
 
-.container h1,
-.conatiner h2,
-.conatiner p {
+/* .container h1,
+.container h2,
+.container p {
     color: red;
+}
+
+.container :is(h1,h2,p) {
+    color: blue;
+}
+
+a:is(:hover, :focus) {
+    background-color: pink;
+}
+
+.container :where(h1,h2,p) {
+    color: green;
+} */
+
+/* :is(condition)  :where(condition) :has(condition) */
+.container:has(h1 span) {
+    color: red;
+}
+
+h1:has(+ h2) {
+    color:blue;
 }
