Pseudo element styling forms project

--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/styling_forms.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/styling_forms.css
@@ -66,3 +66,14 @@ textarea {
 input[type='submit'] {
     background: var(--primary-color);
 }
+
+input[type='submit'] {
+    background: var(--primary-color);
+    color: #fff;
+    border:none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: inherit;
+    font-family: inherit;
+}
