--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid.css
@@ -17,5 +17,8 @@ body {
 
 .item-grid {
     display: grid;
-    grid-template-columns: 100px 100px 100px;
+    grid-template-columns: 600px 1fr 1fr;
+    /* grid-row-gap: 20px; */
+    /* grid-column-gap: 20px; */
+    gap: 20px;
 }
