--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid.css
@@ -17,8 +17,14 @@ body {
 
 .item-grid {
     display: grid;
-    grid-template-columns: 600px 1fr 1fr;
+    /* grid-template-columns: 600px 1fr 1fr; */
     /* grid-row-gap: 20px; */
     /* grid-column-gap: 20px; */
-    gap: 20px;
+    /* gap: 20px; */
+    /* grid-template-columns: repeat(3, 100px); */
+    /* grid-template-columns: repeat(3, minmax(300px, 1fr)); */
+    grid-template-columns: minmax(300px, 1fr) minmax(200px, 1fr) minmax(
+        200px,
+        1fr
+    );
 }
