--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_rows.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_rows.css
@@ -9,7 +9,7 @@ body {
 
 .item-grid {
     display: grid;
-    grid-template-rows: 1fr 2fr 3fr;
+    grid-template-rows: 200px 2fr 3fr;
     background: #f4f4f4;
 }
 
