Grid Columns and Gap

--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_challenge.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_challenge.css
@@ -14,3 +14,11 @@ body {
     border: 1px solid #333;
     text-align: center;
 }
+
+.item-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 2fr 3fr;
+    grid-auto-rows: 4fr;
+    gap: 1rem;
+}
