--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/align.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/align.css
@@ -20,4 +20,5 @@ body {
     grid-template-columns: repeat(3, 200px);
     grid-template-rows: repeat(3, 100px);
     justify-content: space-around;
+    justify-items: end;
 }
