Ch15 CSS Grid align and justify properties

--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/align.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/align.css
@@ -19,6 +19,9 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 200px);
     grid-template-rows: repeat(3, 100px);
-    justify-content: space-around;
-    justify-items: end;
+    /* justify-content: space-around; */
+    /* justify-items: end; */
+    /* align-items: center; */
+    /* align-content: center; */
+    place-content: space-around;
 }
