Ch15 CSS Grid align and justify properties

--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/align.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/align.css
@@ -23,5 +23,6 @@ body {
     /* justify-items: end; */
     /* align-items: center; */
     /* align-content: center; */
-    place-content: space-around;
+    /* place-content: space-around; */
+    place-items: center;
 }
