--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_positioning.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_positioning.css
@@ -24,6 +24,21 @@ body {
 }
 
 .item-1 {
-    grid-column-start: 1;
-    grid-column-end: 3;
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+
+    /* grid-column: 1 / 3; */
+    grid-row: 3 / span 2;
+}
+
+.item-3 {
+    /* grid-row-start: 2;
+    grid-row-end: 4; */
+    /* grid-row: 2/4; */
+    grid-row: span 2;
+}
+
+.item-9 {
+    grid-column: 2/4;
+    grid-column: span 2;
 }
