Grid Named Lines

--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
@@ -1,3 +1,10 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.contaienr {
+    max-width: 1100px;
+    margin: 30px auto;
+    background: #f4f4f4;
+    height: 600px;
+}
