--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
@@ -8,3 +8,14 @@ body {
     background: #f4f4f4;
     height: 600px;
 }
+
+.item {
+    background-color: coral;
+    padding: 1rem;
+    border: 1px solid #333;
+    text-align: center;
+}
+
+.item-grid {
+    display: grid;
+}
