Named grid lines

--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
@@ -9,7 +9,7 @@ body {
     height: 600px;
 }
 
-.item {
+/* .item {
     background-color: coral;
     padding: 1rem;
     border: 1px solid #333;
@@ -18,4 +18,4 @@ body {
 
 .item-grid {
     display: grid;
-}
+} */
