--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
@@ -19,6 +19,6 @@ body {
 .item-grid {
     display: grid;
     grid-template-columns: [col-1-start] 1fr;
-    [col-1-end col-2-start] 1fr [col-2-end col-3-start] 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    [col-1-end col-2-start] 1fr [col-2-end col-3-start] 1fr [col-3-end];
+    grid-template-rows: [row-1-start] 1fr [row-1-end row-2-start] 1fr [row-2-end row-3-start] 1fr [row-3-end];
 }
