Add grid-named template

--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
@@ -22,3 +22,8 @@ body {
     [col-1-end col-2-start] 1fr [col-2-end col-3-start] 1fr [col-3-end];
     grid-template-rows: [row-1-start] 1fr [row-1-end row-2-start] 1fr [row-2-end row-3-start] 1fr [row-3-end];
 }
+
+.item-1 {
+    grid-column-start: col-1-start;
+    grid-column-end: col-2-end;
+}
