Add grid-named template

--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_named.css
@@ -27,3 +27,8 @@ body {
     grid-column-start: col-1-start;
     grid-column-end: col-2-end;
 }
+
+.item-3 {
+    grid-row-start: col-2-start;
+    grid-row-end: col-3-end;
+}
