--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_media_queries.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_media_queries.css
@@ -46,3 +46,16 @@ footer {
     padding: 20px;
     grid-column: span 2;
 }
+
+@media(max-width: 768px) {
+    .container {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto 1fr;
+        grid-auto-rows: auto;
+    }
+
+    header,
+    footer {
+        grid-column: span 1;
+    }
+}
