--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_template_area.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_template_area.css
@@ -3,3 +3,53 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    display: grid;
+    gap: 1rem;
+    grid-template-areas: 
+    'header'
+    'search'
+    'nav';
+}
+
+header {
+    background-color: #333;
+    color:#fff;
+    padding: 20px;
+    grid-area: header;
+}
+
+nav {
+    background-color: #444;
+    color: #fff;
+    padding: 20px;
+    grid-area: nav;
+}
+
+.search {
+    background-color: #666;
+    color: #fff;
+    padding: 20px;
+    grid-area: search;
+}
+
+main {
+    background-color: #f0f0f0;
+    padding: 20px;
+}
+
+aside {
+    background-color: #ddd;
+    padding: 20px;
+}
+
+footer {
+    background-color: #666;
+    color: #fff;
+    padding: 20px;
+}
