--- a/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/intro_transistions.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/intro_transistions.css
@@ -15,8 +15,15 @@ body {
     border-radius: 5px;
     cursor: pointer;
     width: 200px;
+    /* transition: background-color 2.8s ease-in-out, color 0.8s; */
+    transition: all 0.8s ease-in-out;
 }
 
 .btn:hover {
     background-color: #0056b3;
+    color: yellow;
+    width: 400px;
+    border-radius: 50px;
+    opacity: 0.5;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
