--- a/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/transfrom_property.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/transfrom_property.css
@@ -12,4 +12,15 @@ body {
 
 .logo {
     max-width: 100%;
+    transition: all 0.5s;
+}
+
+.logo:hover {
+    transform: rotate(-90deg);
+    transform: translateX(-200px);
+    transform: translateY(200px);
+    transform: translate(200px, 200px);
+    transform: skew(-30deg);
+    transform: scale(1.5);
+    transform: rotate(90deg) scale(2);
 }
