--- a/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/transform_3d.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/transform_3d.css
@@ -20,6 +20,8 @@ body {
     width: 200px;
     height: 300px;
     position:relative;
+    transform-style: preserve-3d;
+    transition: transfrom 0.5s ease;
 }
 
 .front {
