--- a/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/transform_3d.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/transform_3d.css
@@ -14,6 +14,7 @@ body {
 .card-container {
     margin-top: 50px;
     text-align: center;
+    perspective: 1000px;
 }
 
 .card {
@@ -22,6 +23,10 @@ body {
     position:relative;
     transform-style: preserve-3d;
     transition: transfrom 0.5s ease;
+}
+
+.card:hover {
+    transform: rotateY(180deg);
 }
 
 .front {
@@ -34,11 +39,19 @@ body {
     background: #2ecc71;
     color: #fff;
     line-height: 300px;
+    transform: rotateY(180deg);
+}
+
+.front {
+    background: #3498db;
+    color: #fff;
+    line-height: 300px;
 }
 
 .front,
 .back {
     position: absolute;
     width: 100%;
-    height: 100;
+    height: 100%;
+    backface-visibility: hidden;
 }
