--- a/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/js_css_intro.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/js_css_intro.css
@@ -16,3 +16,12 @@ body {
     border-radius: 50px;
     margin: 10px;
 }
+
+.dark {
+    background-color: #333;
+    color: #fff;
+}
+
+.yellow {
+    color: yellow;
+}
