--- a/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/Website Mini-Project/presentation_site.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/Website Mini-Project/presentation_site.css
@@ -4,8 +4,116 @@
     box-sizing: border-box;
 }
 
-
-
 body {
     font-family: 'Poppins', sans-serif;
+}
+
+/* root scope (pseudo-class selector for '<html>' element)*/
+:root {
+    --page-1-color: steelblue;
+    --page-2-color: tan;
+    --page-3-color: teal;
+    --page-4-color: slateblue;
+    --animate-speed: 2s; /*Thsi speed is for animation*/
+}
+
+html,
+body {
+    font-family: 'poppins', sans-serif;
+    scroll-hehavior: smooth;
+}
+
+.page {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 3rem;
+    color: #fff;
+
+    h1 {
+        font-size: 4rem;
+        line-height: 1.2;
+        margin: 2rem;
+    }
+
+    p {
+        font-size: 1.3rem;
+    }
+}
+
+/* Page Colors */
+#page-1 {
+    background: var(--page-1-color);
+}
+#page-2 {
+    background: var(--page-2-color);
+}
+#page-3 {
+    background: var(--page-3-color);
+}
+#page-4 {
+    background: var(--page-4-color);
+}
+
+.btn {
+    display: inline-block;
+    padding: 1rem 2rem;
+    background: #f4f4f4;
+    color: #333;
+    border: none;
+    text-decoration: none;
+    font-size: 1.1rem;
+    margin-top: 3rem;
+    transition: all 0.5s ease-in;
+
+    &:hover {
+        background: #333;
+        color: #fff;
+    }
+}
+
+.btn-dark {
+    background: #333;
+    color: #fff;
+
+    &:hover {
+        opacity: 0.9;
+    }
+}
+
+#page-1 {
+    h1 {
+        transform: translateY(-1200px);
+        animation: textMove var(--animate-speed) ease-in forwards;
+    }
+
+    p {
+        transform: translateX(-1800px);
+    }
+}
+
+@keyframes headingMove {
+    to {
+        transform: translateY(0)
+    }
+}
+
+@keyframes textMove {
+    to {
+        transform: translateX(0)
+    }
+}
+
+@media(max-width: 768px) {
+    .page {
+        h1 {
+            font-size: 3.5rem;
+        }
+
+        p {
+            font-size: 1.1rem;
+        }
+    }
 }
