--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
@@ -94,6 +94,10 @@ img {
 
 @media(max-width: 992px) {}
 
-@media(max-width: 768px) {}
+@media(max-width: 768px) {
+    .main-menu-items {
+        display: none;
+    }
+}
 
 @media(max-width: 576px) {}
