Add background image

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
@@ -33,6 +33,7 @@ img {
     max-width: 100%;
 }
 
+/* Utility Classes */
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -45,9 +46,26 @@ img {
     padding: 0 2rem;
 }
 
+.btn {
+    display: inline-block;
+    padding: 1.6rem 2.6rem;
+    border: 1px solid var(--secondary-color);
+    border-radius: 32px;
+    background: var(--secondary-color);
+    color: var(--dark-color);
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.btn:hover {
+    background: var(--primary-color);
+    color: #fff;
+    border-color: #fff;
+}
+
 /* Navbar */
 .navbar {
-    background: black;  /*Temp*/
+    background: transparent;  /*Temp*/
     color: white;
     padding: 1rem 2rem;
     position: fixed;;
@@ -124,6 +142,47 @@ img {
     gap: 2rem;
     font-size: 1.2rem;
     
+}
+
+/* Hero */
+.hero {
+    background-color: #000;
+    background-image: url('../images/header-background.jpg');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 11.rem 2 rem 8rem;
+    color: #fff;
+    overflow-x: hidden;
+    position: relative;
+    
+}
+
+.hero .hero-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 6rem;
+    padding-bottom: 8rem;
+}
+
+.hero h1 {
+    font-size: 3.5rem;
+    line-height: 1.2;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+
+.hero p {
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+    line-height: 1.8;
+    font-weight: 400;
+}
+
+.hero img {
+    width: 100%;
+    margin-right: -100px;
 }
 
 /* Media Query */
