--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
@@ -185,6 +185,14 @@ img {
     margin-right: -100px;
 }
 
+.hero .frame-decoration {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+}
+
 /* Media Query */
 @media(max-width: 1200px) {
 
