--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
@@ -48,7 +48,7 @@ img {
 
 .btn {
     display: inline-block;
-    padding: 1.6rem 2.6rem;
+    padding: 1.3rem 2.3rem;
     border: 1px solid var(--secondary-color);
     border-radius: 32px;
     background: var(--secondary-color);
@@ -190,15 +190,40 @@ img {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 100px;
 }
 
 /* Media Query */
 @media(max-width: 1200px) {
+    .hero .hero-flex {
+        gap: 2rem;
+    }
+
+    .hero img {
+        max-width: 500px;
+        margin-right: 0;
+    }
+
+    .hero h1 {
+        font-size: 3rem;
+    }
 
 }
 
-@media(max-width: 992px) {}
+@media(max-width: 992px) {
+    .hero {
+        text-align: center;
+    }
+
+    .hero .hero-flex {
+        flex-direction: column;
+        padding-bottom: 4rem;
+    }
+
+    .hero img {
+        max-width: 600px;
+        margin-top: 2rem;
+    }
+}
 
 @media(max-width: 768px) {
     .main-menu-items {
@@ -213,4 +238,17 @@ img {
     }
 }
 
-@media(max-width: 576px) {}
+@media(max-width: 576px) {
+    .hero {
+        padding-right: 0.2rem;
+        padding-left: 0.2rem;
+    }
+
+    .hero h1 {
+        font-size: 2.5rem;
+    }
+
+    .hero img {
+        max-width: 350px;
+    }
+}
