--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/CSS/styles.css
@@ -110,7 +110,7 @@ this class on this element.
  */
 
 .navbar.navbar-scroll {
-    background-color: rgba(235, 77, 85, 0.7);
+    background-color: rgba(235, 77, 85, 0.8);
     backdrop-filter: blur(10px);
 }
 
@@ -237,6 +237,23 @@ this class on this element.
     gap: 2rem;
 }
 
+.topic img {
+    transition: transform 0.3s;
+}
+
+.topic img:hover {
+    transform: scale(1.1);
+}
+
+.topic h3 {
+    font-size: 1rem;
+    font-weight: 700;
+    margin: 0.5rem 0;
+}
+
+
+
+
 /* Media Query */
 @media(max-width: 1200px) {
     .hero .hero-flex {
@@ -250,6 +267,10 @@ this class on this element.
 
     .hero h1 {
         font-size: 3rem;
+    }
+
+    .topics {
+        grid-template-columns: repeat(3,1fr);
     }
 
 }
@@ -267,6 +288,10 @@ this class on this element.
     .hero img {
         max-width: 600px;
         margin-top: 2rem;
+    }
+
+    .topics {
+        grid-template-columns: repeat(2,1fr);
     }
 }
 
@@ -295,5 +320,9 @@ this class on this element.
 
     .hero img {
         max-width: 350px;
+    }
+
+    .topics {
+        grid-template-columns: 1fr;
     }
 }
